--- a/src/css/input.scss
+++ b/src/css/input.scss
@@ -6,6 +6,15 @@ input {
     outline: none;
   }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .about {
   display: flex;
   margin-bottom: $spacing4;
