--- a/src/css/style.css
+++ b/src/css/style.css
@@ -88,6 +88,16 @@ input:focus {
   outline: none;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .about {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -263,12 +273,13 @@ input:focus {
 }
 
 .armor .armorInput {
-  border: none;
-  background: transparent;
+  max-width: 100%;
+  color: #F8F8F7;
   font-family: inherit;
   font-size: 1.125rem;
-  color: #F8F8F7;
-  padding-left: 48%;
+  text-align: center;
+  border: none;
+  background: transparent;
 }
 
 #hearts {
